--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Zach's Food Adventures</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/5.8.2/firebase-app.js"></script>
